// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all data 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiBox-root MuiBox-root-4"
          >
            <div
              class="MuiBox-root MuiBox-root-5"
            >
              tag 3
            </div>
            <div
              class="MuiBox-root MuiBox-root-6"
            >
              134,16 €
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiBox-root MuiBox-root-7"
          >
            <div
              class="MuiBox-root MuiBox-root-8"
            >
              tag 1
            </div>
            <div
              class="MuiBox-root MuiBox-root-9"
            >
              2,16 €
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiBox-root MuiBox-root-10"
          >
            <div
              class="MuiBox-root MuiBox-root-11"
            >
              tag 2
            </div>
            <div
              class="MuiBox-root MuiBox-root-12"
            >
              0,16 €
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiBox-root MuiBox-root-13"
          >
            <div
              class="MuiBox-root MuiBox-root-14"
            >
              untagged
            </div>
            <div
              class="MuiBox-root MuiBox-root-15"
            >
              0,00 €
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`renders correctly with filtered data 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiBox-root MuiBox-root-16"
          >
            <div
              class="MuiBox-root MuiBox-root-17"
            >
              tag 3
            </div>
            <div
              class="MuiBox-root MuiBox-root-18"
            >
              132,00 €
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiBox-root MuiBox-root-19"
          >
            <div
              class="MuiBox-root MuiBox-root-20"
            >
              untagged
            </div>
            <div
              class="MuiBox-root MuiBox-root-21"
            >
              0,00 €
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`renders correctly without data 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiBox-root MuiBox-root-1"
          >
            <div
              class="MuiBox-root MuiBox-root-2"
            >
              untagged
            </div>
            <div
              class="MuiBox-root MuiBox-root-3"
            >
              0,00 €
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
